crates/fig-parser/tests/snapshots/integration_tests__interfaces__empty.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Interface:
      visibility: Default
      annotations: []
      name:
        segments:
          - Marker
      generic_params: []
      extends: []
      methods: []
