crates/fig-parser/tests/snapshots/integration_tests__interfaces__extends_many.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Interface:
      visibility: Default
      annotations: []
      name:
        segments:
          - FullNumeric
      generic_params: []
      extends:
        - Path:
            path:
              segments:
                - Add
            generic_args: []
        - Path:
            path:
              segments:
                - Sub
            generic_args: []
        - Path:
            path:
              segments:
                - Mul
            generic_args: []
        - Path:
            path:
              segments:
                - Div
            generic_args: []
        - Path:
            path:
              segments:
                - Neg
            generic_args: []
        - Path:
            path:
              segments:
                - Eq
            generic_args: []
        - Path:
            path:
              segments:
                - Ord
            generic_args: []
        - Path:
            path:
              segments:
                - Display
            generic_args: []
      methods:
        - visibility: Default
          annotations: []
          is_extern: false
          is_effect: false
          receiver: ~
          name: abs
          outer_generic_params: []
          func_generic_params: []
          self_param:
            is_pointer: true
            is_mutable: false
          params: []
          return_types:
            - Path:
                path:
                  segments:
                    - Self
                generic_args: []
        - visibility: Default
          annotations: []
          is_extern: false
          is_effect: false
          receiver: ~
          name: signum
          outer_generic_params: []
          func_generic_params: []
          self_param:
            is_pointer: true
            is_mutable: false
          params: []
          return_types:
            - I32
