crates/fig-parser/tests/snapshots/integration_tests__interfaces__with_extends.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Interface:
      visibility: Default
      annotations: []
      name:
        segments:
          - Ordered
      generic_params: []
      extends:
        - Path:
            path:
              segments:
                - Eq
            generic_args: []
        - Path:
            path:
              segments:
                - PartialOrd
            generic_args: []
      methods:
        - visibility: Default
          annotations: []
          is_extern: false
          is_effect: false
          receiver: ~
          name: compare
          outer_generic_params: []
          func_generic_params: []
          self_param:
            is_pointer: true
            is_mutable: false
          params:
            - name: other
              ty:
                Pointer:
                  nullable: false
                  mutable: false
                  element_type:
                    Path:
                      path:
                        segments:
                          - Self
                      generic_args: []
          return_types:
            - I32
