crates/fig-parser/tests/snapshots/integration_tests__interfaces__with_requires.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Interface:
      visibility: Default
      annotations: []
      name:
        segments:
          - Numeric
      generic_params:
        - Type:
            name: T
            bounds: []
            default_type: ~
      extends: []
      requires:
        - Path:
            path:
              segments:
                - Add
            generic_args: []
        - Path:
            path:
              segments:
                - Sub
            generic_args: []
        - Path:
            path:
              segments:
                - Mul
            generic_args: []
        - Path:
            path:
              segments:
                - Div
            generic_args: []
      methods:
        - visibility: Default
          annotations: []
          is_extern: false
          is_effect: false
          receiver: ~
          name: zero
          outer_generic_params: []
          func_generic_params: []
          self_param: ~
          params: []
          return_types:
            - Path:
                path:
                  segments:
                    - T
                generic_args: []
        - visibility: Default
          annotations: []
          is_extern: false
          is_effect: false
          receiver: ~
          name: one
          outer_generic_params: []
          func_generic_params: []
          self_param: ~
          params: []
          return_types:
            - Path:
                path:
                  segments:
                    - T
                generic_args: []
